--- a/src/app/chat/components/breef-message-showing/breef-message-showing.component.scss
+++ b/src/app/chat/components/breef-message-showing/breef-message-showing.component.scss
@@ -57,11 +57,15 @@
 }
 .breef {
   background: #ffffff;
-  border: 1px solid #dce0e6;
+  // border: 1px solid #dce0e6;
   box-sizing: border-box;
   border-radius: 2px;
-  padding: 20px 26px 30px;
-
+  // padding: 20px 26px 30px;
+  height: 0;
+  overflow: hidden;
+  &>div {
+    padding: 20px 26px 30px;
+  }
   h5 {
     font-family: Source Sans Pro, sans-serif;
     font-style: normal;
@@ -80,13 +84,30 @@
       font-size: 16px;
       line-height: 20px;
       color: #707683;
-      margin: 0 0 8px;
+      margin: 0 26px 8px;
       padding: 0;
       &:last-of-type {
-
         margin-bottom: 18px;
       }
     }
+    // &:first-of-type {
+    //   margin: 20px 26px 8px;
+    // }
+    // &:last-of-type {
+    //   margin: 8px 26px 30px;
+    // }
+  }
+  &.show {
+    // border: 1px solid #dce0e6;
+    height: 380px;
+    // min-height: 100px;
+    // padding: 20px 26px 30px;
+    transition: height 1s;
+    overflow: auto;
+  }
+  &.hidden {
+    height: 0;
+    transition: height 1s ease-in-out;
   }
 
 }
@@ -109,5 +130,14 @@
       margin-right: 50px;
       padding: 10px 40px;
     }
+  }
+}
+
+@keyframes breefItemsAnimation {
+  from{
+    height: 0;
+  }
+  to {
+    height: 100%;
   }
 }
