--- a/src/app/dashboard-page/dashboard-pages/finace-page/components/admin-finances/admin-finances.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/finace-page/components/admin-finances/admin-finances.component.scss
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  height: 97%;
   .compressed-statistic {
     display: flex;
     flex-direction: row;
