--- a/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.scss
+++ b/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.scss
@@ -63,4 +63,10 @@
       border-color: #D4DAFF;
     }
   }
+  &.workStrated{
+    h5 {
+      color: #F1A153;
+      border-color: #FFE8C9;
+    }
+  }
 }
