--- a/src/app/service-page/components/service-page-packages/service-page-packages.component.scss
+++ b/src/app/service-page/components/service-page-packages/service-page-packages.component.scss
@@ -45,6 +45,14 @@
       color: #fff;
       transition: all 0.3s;
     }
+    &.disabled{
+      cursor: default;
+      background-color: #C2CFE0;
+      color: #fff;
+      &:hover {
+        top: 0;
+      }
+    }
   }
   .tabContent {
     background: #ffffff;
