--- a/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.html
+++ b/src/app/chat/components/system-messages-in-deals/system-messages-in-deals.component.html
@@ -15,13 +15,27 @@
         <h5>{{'chat.work_chat.system_messages.'+ systemMessage.message.name + 'TitleDealer'  | translate}} </h5>
         <p>{{'chat.work_chat.system_messages.' + systemMessage.message.name+ 'DescriptionDealer' | translate}} </p>
       </ng-container>
+
+      <div class="actions" [ngClass]="{ btwn: dealCencel }">
+        <button *ngIf="!isUserFreelancer && messageClass === 'breef' && collocutorData.moneyHolded !== 1" class="btn" (click)="holdMoneynDeal()">Зарезирвировать оплату</button>
+
+        <button *ngIf="isUserFreelancer && messageClass === 'hold-money' && collocutorData.workStarted !==1" class="btn" (click)="goToWork()">уведометь о начале работы</button>
+
+        <!-- deal canceling  -->
+
+        <button class="btn-sec"  *ngIf="dealCencel && messageClass === 'deal-cencel'"  >Обратится в арбитраж</button>
+        <button class="btn" *ngIf="dealCencel && messageClass === 'deal-cencel'" (click)="submitDealCancel()"  >Подтвердть отмену</button>
+        <!-- Deal preFinish -->
+
+        <button class="btn-sec"  *ngIf="!isUserFreelancer &&dealCencel && messageClass === 'DealFinishedByFreelancer'" (click)="cancelFinishDeal()"  >вернуть к работе </button>
+        <button class="btn" *ngIf="!isUserFreelancer &&dealCencel && messageClass === 'DealFinishedByFreelancer'" (click)="submitFinishWork()"  > работа завершена</button>
+
+
+      </div>
     </div>
   </div>
-  <div class="actions">
-    <button *ngIf="!isUserFreelancer && messageClass === 'breef' && collocutorData.moneyHolded !== 1" class="btn" (click)="holdMoneynDeal()">Зарезирвировать оплату</button>
 
-    <button *ngIf="isUserFreelancer && messageClass === 'hold-money'" class="btn" (click)="goToWork()">уведометь о начале работы</button>
-  </div>
 </div>
 
 
+<!-- earlyСlosing -->
