--- a/src/app/chat/components/collocutors-list/collocutors-list.component.html
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.html
@@ -4,14 +4,14 @@
   </section>
   <section class="collocutors-wrap">
     <!-- Serch n classic chat -->
-    <div class="collocutors-serch" *ngIf="chatType !== 'work'">
+    <!-- <div class="collocutors-serch" *ngIf="chatType !== 'work'">
       <div class="search">
         <input type="text" name="" id="" placeholder="Найти">
       </div>
 
-    </div>
+    </div> -->
     <!-- Filters component for work chat -->
-    <app-projects-filter *ngIf="chatType == 'work'"></app-projects-filter>
+    <app-projects-filter *ngIf="chatType == 'work'" (setCurrentType)="setCurrentType($event)"></app-projects-filter>
     <!-- List of ollocutors  -->
     <div class="collocutors-list" [ngClass]="{ projects: chatType === 'work' }">
       <ng-container *ngFor="let collocutor of collocutors, let i=index">
