--- a/src/app/chat/components/collocutors-list/collocutors-list.component.scss
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.scss
@@ -50,7 +50,7 @@
   height: 100%;
   overflow: auto;
   // padding-right: 20px;
-  margin-top: 50px;
+  // margin-top: 50px;
     &::-webkit-scrollbar-track
     {
       -webkit-box-shadow: none;
