--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -161,7 +161,10 @@
 .side-bar {
   width: 20%;
   height: 93.4%;
+  display: flex;
+  flex-direction: column;
   .avatar {
+    min-height: 260px;
     height: 260px;
     display: flex;
     justify-content: center;
@@ -196,6 +199,9 @@
   }
   .menu {
     padding: 64px 45px;
+    background: #FAFBFC;
+    box-sizing: border-box;
+    height: 100%;
     nav {
       display: flex;
       flex-direction: row;
