--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
@@ -101,6 +101,7 @@ section:not(.wrap) {
     height: 182px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
     border-radius: 3px;
+    cursor: pointer;
     img {
       width: 100%;
       height: 100%;
