--- a/src/app/service-page/components/service-page/service-page.component.scss
+++ b/src/app/service-page/components/service-page/service-page.component.scss
@@ -392,3 +392,6 @@ app-service-page-another-services{
 app-service-page-earlier-viewed{
   width: 100%;
 }
+app-service-page-checkout{
+  width: 100%;
+}
